# ore-cli

./: Cargo.toml
.cargo/: config.toml
drillx-gpu/: Cargo.toml  build.rs
drillx-gpu/src/: lib.rs
src/: args.rs  mine.rs
