[package]
name = "drillx-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
blake3 = "1.5"
equix = "0.1.4"
solana-program = "1.18.11"
strum = { version = "0.26.2", features = ["derive"] }


[build-dependencies]
cc = { version = "1.0" }


[features]
default = []
cuda = []